syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_CUDA_Module
 */
 message Bin_POSHandle_CUDA_Module {
    Bin_POSHandle base = 1;
}
